ADDed a paragraph of text

--- a/holamundo.html
+++ b/holamundo.html
@@ -9,5 +9,6 @@
 <body>
     <H1>ESTO ES UNA PRUEBA DE CURSO PARA APRENDER GITHUB</H1>
     <P>PROBANDO HOLA MUNDO</P>
+    <h2> ESTE ES EL CAMBIO PARA EL PRIMER COMMIT DE GITHUB</h2>
 </body>
 </html>
